Suppression des dépendances à Spring. Mise à jour des données avec celles fournies par l’OFS